# movey_cli

./: Cargo.toml  README.md
.github/workflows/: build.yml  tests.yml
cli/: Cargo.toml
cli/src/: lib.rs
cli/src/base/: mod.rs  move_package_resolver.rs  movey_login.rs  movey_upload.rs
core/: Cargo.toml
core/src/: commands.rs
src/: main.rs
tests/: test_cli.rs
utils/: Cargo.toml
utils/src/: error.rs  lib.rs  movey_credential.rs
utils/tests/: test_config.rs
