[package]
name = "cli"
version = "0.0.1"
authors = ["Abid Omar <contact@omarabid.com>"]
description = "CLI interface"
edition = "2018"

[dependencies]
utils = { path = "../utils" }
core = { path = "../core" }
clap = { version = "3.1.8", features = ["derive"] }
anyhow = "1.0.66"
toml_edit =  { version = "0.14.3", features = ["easy"] }
reqwest = { version = "0.11.1", features = ["blocking", "json"] }
serde = { version = "1.0.124", default-features = false }

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
