[package]
name = "utils"
version = "0.0.1"
authors = ["Abid Omar <contact@omarabid.com>"]
description = "Various utilities and functionalities"
edition = "2018"

[dependencies]
failure = "0.1.5"
config = "0.10.1"
lazy_static = "1.4"
slog = "2.5.2"
slog-syslog = "0.12.0"
slog-term = "2.6.0"
slog-scope = "4.3.0"
slog-async = "2.5.0"
slog-stdlog = "4.1.0"
log = "0.4.11"
serde = { version = "1.0", features = ["derive"]}
anyhow = "1.0.66"
toml_edit =  { version = "0.14.3", features = ["easy"] }
once_cell = "1.7.2"
dirs-next = "2.0.0"

[dependencies.clap]
version = "3.0.0-beta.2"
features = ["yaml"]
