[package]
name = "utils"
version = "0.0.1"
authors = ["East Agile <open-source@eastagile.com>"]
description = "Various utilities and functionalities"
edition = "2021"

[dependencies]
failure = "0.1.8"
config = "0.10.1"
lazy_static = "1.4"
slog = "2.7.0"
slog-syslog = "0.13.0"
slog-term = "2.9.0"
slog-scope = "4.4.0"
slog-async = "2.7.0"
slog-stdlog = "4.1.1"
log = "0.4.11"
serde = { version = "1.0.147", features = ["derive"]}
anyhow = "1.0.66"
toml_edit =  { version = "0.15.0", features = ["easy"] }
once_cell = "1.16.0"
dirs-next = "2.0.0"
serial_test = "0.9.0"

[dependencies.clap]
version = "3.0.0-beta.2"
features = ["yaml"]
